// <auto-generated />
using System;
using ATMWeb.Data;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;

#nullable disable

namespace ATMWeb.Migrations
{
    [DbContext(typeof(DataContext))]
    partial class DataContextModelSnapshot : ModelSnapshot
    {
        protected override void BuildModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder.HasAnnotation("ProductVersion", "9.0.0");

            modelBuilder.Entity("ATMWeb.Model.CarteBancaire", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<int>("CompteId")
                        .HasColumnType("INTEGER");

                    b.Property<bool>("EstBloquee")
                        .HasColumnType("INTEGER");

                    b.Property<int>("NombreEssaisRestants")
                        .HasColumnType("INTEGER");

                    b.Property<string>("NumeroCarte")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.Property<string>("Pin")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("CompteId")
                        .IsUnique();

                    b.ToTable("CartesBancaires");
                });

            modelBuilder.Entity("ATMWeb.Model.Compte", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<decimal>("Solde")
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.ToTable("Comptes");
                });

            modelBuilder.Entity("ATMWeb.Model.Operation", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("INTEGER");

                    b.Property<int>("CompteId")
                        .HasColumnType("INTEGER");

                    b.Property<DateTime>("DateOperation")
                        .HasColumnType("TEXT");

                    b.Property<decimal>("Montant")
                        .HasColumnType("TEXT");

                    b.Property<string>("Type")
                        .IsRequired()
                        .HasColumnType("TEXT");

                    b.HasKey("Id");

                    b.HasIndex("CompteId");

                    b.ToTable("Operations");
                });

            modelBuilder.Entity("ATMWeb.Model.CarteBancaire", b =>
                {
                    b.HasOne("ATMWeb.Model.Compte", "Compte")
                        .WithOne("CarteBancaire")
                        .HasForeignKey("ATMWeb.Model.CarteBancaire", "CompteId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Compte");
                });

            modelBuilder.Entity("ATMWeb.Model.Operation", b =>
                {
                    b.HasOne("ATMWeb.Model.Compte", "Compte")
                        .WithMany("Operations")
                        .HasForeignKey("CompteId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired();

                    b.Navigation("Compte");
                });

            modelBuilder.Entity("ATMWeb.Model.Compte", b =>
                {
                    b.Navigation("CarteBancaire")
                        .IsRequired();

                    b.Navigation("Operations");
                });
#pragma warning restore 612, 618
        }
    }
}
